<resources>
    <string name="app_name">ZadanieDomowe1</string>
    <string name="action_settings">Settings</string>
    <string name="name">John Dee</string>
    <string name="change_contact">Change Contact</string>
    <string name="change_sound">Change Sound</string>
    <string name="name4">Maria Kowalska</string>
    <string name="name5">John Dee</string>
    <string name="name3">Aleksandra Lisiak</string>
    <string name="name2">Krystian Nowak</string>
    <string name="name1">Jan Kowalski</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="confirm">OK</string>
    <string name="cancelSound">Cancel</string>
    <string-array name="soundArray">
        <item>sound 1</item>
        <item>sound 2</item>
        <item>sound 3</item>
        <item>sound 4</item>
        <item>sound 5</item>
    </string-array >
</resources>
